clusters/homelab-1/network/ipmi-node3.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ipmi-node3
  namespace: network
subsets:
  - addresses:
      - ip: ${NODE3_IPMI_ADDRESS}
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ipmi-node3
  namespace: network
spec:
  clusterIP: None
  ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipmi-node3
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: IPMI Management
    gethomepage.dev/group: Network
    gethomepage.dev/icon: supermicro.png
    gethomepage.dev/name: IPMI node3
spec:
  ingressClassName: internal
  rules:
    - host: &host ipmi-node3.${INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipmi-node3
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: ipmi-node3-tls
