clusters/homelab-1/network/unifi-network.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-udm
  namespace: network
subsets:
  - addresses:
      - ip: ${UNIFI_CONTROLLER_IP_ADDRESS}
    ports:
      - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-udm
  namespace: network
spec:
  clusterIP: None
  ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-udm
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Unifi network controller.
    gethomepage.dev/group: Network
    gethomepage.dev/icon: unifi-controller.png
    gethomepage.dev/name: Unifi Controller
spec:
  ingressClassName: internal
  rules:
    - host: network.${INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-udm
                port:
                  number: 443
  tls:
    - hosts:
        - network.${INTERNAL_DOMAIN}
      secretName: unifi-udm-tls
